--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Step 2 - Set up JDK 1.8
       uses: actions/setup-java@v4
       with:
-        java-version: 1.8
+        java-version: 8.0.302+8
         distribution: 'temurin'
         
     - name: Step 3 - Have Github Actions Build Maven project
